Add to Wave interference

--- a/Physic2/Tex_file/Tex_file.tex
+++ b/Physic2/Tex_file/Tex_file.tex
@@ -511,8 +511,6 @@ Or: \\
 	\end{center}
 \end{mybox}
 
-\end{enumerate}
-
 For: k is a \textbf{wave number}. And: \\
 \begin{mybox}
 	\begin{center}
@@ -527,6 +525,40 @@ We also have: \\
 		$\omega = vk$ \textbf{or} $v = \dfrac{\omega}{k}$
 	\end{center}
 \end{mybox}
+
+	%3
+	\item \textbf{Particle Velocity and Acceleration in a Sinusoidal Wave} \\
+	For: \\
+	\begin{center}
+		$y(x, t) = A cos(kx - \omega t)$
+	\end{center}
+
+	\begin{itemize}
+		\item We have the velocity of the particle in a wave:
+			\begin{center}
+				$v_{y}(x, t) = \dfrac{\delta y(x, t)}{\delta t} =  \omega A sin(kx - \omega t)$
+			\end{center}
+		\item For Acceleration of the particle in a wave:
+			\begin{center}
+				$a_{y}(x, t) = \dfrac{\delta v_{y}(x, t)}{\delta t} = - \omega^{2} A cos(kx - \omega t)$
+			\end{center}
+	\end{itemize}
+
+	\includegraphics[scale = 0.4]{hinh6}
+	\bigbreak
+\end{enumerate}
+\subsection{Wave Interference:}
+\textit{When two or more waves pass through the same region at the same time, that condition is called \textbf{wave interference}.} \\
+
+\begin{itemize}
+	\item When the arriving force exerts a force in a fixed end (wall) will create the reflected wave to the reverse direction. \\
+	\includegraphics[scale = 0.4]{hinh7}
+	\bigbreak
+	\item When the arriving force exerts a force in a free end (free to move up or down, the reflected force will not inverted. \\
+	\includegraphics[scale = 0.4]{hinh8}
+	\bigbreak
+	\item \textbf{Principle of supperposition:} When two or more waves overlap, the total displacement is the sum of the displacements of the individuals.
+\end{itemize} 
 
 \end{document}
 
