Add to Sound Intensity Level

--- a/Physic2/Tex_file/Tex_file.tex
+++ b/Physic2/Tex_file/Tex_file.tex
@@ -558,7 +558,45 @@ We also have: \\
 	\includegraphics[scale = 0.4]{hinh8}
 	\bigbreak
 	\item \textbf{Principle of supperposition:} When two or more waves overlap, the total displacement is the sum of the displacements of the individuals.
-\end{itemize} 
+\end{itemize}
+\subsection{Sound Wave:}
+\begin{enumerate}
+	%1
+	\item \textbf{Sound Intensity:} When sound wave travels, it transfer the enery from one place to another. \\
+	\bigbreak
+	\textbf{Sound Intensity over Fluid: } \\
+	\begin{mybox}
+		\begin{center}
+			$I = \dfrac{p_{max}^{2}}{2 \rho v}$
+		\end{center}
+	\end{mybox}
+	For: \\
+	$$
+	\begin{cases}
+		I \mbox{ is the sound itensity} (V/m^{2}) \\
+		p_{max} \mbox{ is pressure amplitude (Pa)} \\
+		\rho \mbox{ is the density of the fluid} (\rho = 1.20 kg/m^{3}) \\
+		v \mbox{ is wave speed (m/s)}
+	\end{cases}
+	$$
+	%2
+	\item \textbf{Sound Intensity Level: } \\
+	\begin{mybox}
+		\begin{center}
+			$L = 10(dB) log(\dfrac{I}{I_{0}})$
+		\end{center}
+	\end{mybox}
+	For: \\
+	$$
+	\begin{cases}
+		L \mbox{ is sound intensity level (dB)} \\
+		I \mbox{ is intensity of sound wave } (W/m^{2}) \\
+		I_{0} \mbox{ is reference intensity} (I_{0} = 10^{-12} W/m^{2})
+	\end{cases}
+	$$
+	%3
+	\item \textbf{The Doppler Effect: } \\
+\end{enumerate} 
 
 \end{document}
 
